# skypier-blackhole

./: .gitignore  CHANGELOG.md  Cargo.toml  PROJECT_SETUP.md  QUICKSTART.md  README.md  test-config.toml  test-update-config.toml
.devcontainer/: devcontainer.json
.github/workflows/: release.yml
config/: blackhole.toml.example
debian/: postinst
doc/: ARCHITECTURE.md
scripts/: run-test-server.sh  setup.sh  test-cli.sh  test-dns.sh  test-signals.sh  test-update.sh  test-wildcards.sh
src/: blocklist.rs  cli.rs  config.rs  dns.rs  downloader.rs  lib.rs  loader.rs  logger.rs  main.rs  metrics.rs  scheduler.rs
src/tui/: logs.rs  mod.rs  ui.rs
systemd/: skypier-blackhole.service
